[gd_scene load_steps=2 format=3 uid="uid://dxc63iigako8s"]

[ext_resource type="Script" uid="uid://crh3rnhv2sqw5" path="res://Booster/BoosterCards/booster_cards.gd" id="1_ntons"]

[node name="BoosterCards" type="Node3D"]
script = ExtResource("1_ntons")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="DoneButton" type="Button" parent="CanvasLayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -24.5
offset_right = 24.5
offset_bottom = 31.0
grow_horizontal = 2
text = "Done
"

[node name="StartMarker1" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 9.63465)

[node name="StartMarker0" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -30.6638, 0)

[node name="StartMarker2" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 8.63465)

[node name="StartMarker3" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 7.63465)

[node name="StartMarker4" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 6.63465)

[node name="StartMarker5" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 5.63465)

[node name="FrontMarker" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 10)

[node name="Marker1" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5, 6, 0)

[node name="Marker2" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 6, 0)

[node name="Marker3" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8, -2, 0)

[node name="Marker4" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8, -2, 0)

[node name="Marker5" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -7.51, 0)

[node name="FinishMarker" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 32.1424, 0.0144958, 0)

[connection signal="pressed" from="CanvasLayer/DoneButton" to="." method="_on_done_button_pressed"]
